--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <title>Youtube Downloader</title>
   <style type="text/css">
     body {
-      width:400px; height:400px;
+      width:400px;
+      height:400px;
       margin: 0;
       padding: 0;
     }
@@ -15,6 +16,6 @@
 </head>
 <body>
   <iframe src="" id="frame" width="100%" height="100%" frameborder="0"></iframe>
-  <script src="./popup.js"></script>
+  <script src="./script/popup.js"></script>
 </body>
 </html>
